2022-09-12T16:28:54Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038943188
* notice: last 14d: unq all: 5 8
* notice: prev accum: outdated-unq outdated-all / unq all: 86 125 / 95 138
* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 93 133
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -2 -5 / +4 +8 -3 -7 / 1 1
* notice: removed / changed dates: [] / [2022-08-29]

2022-09-12T08:24:47Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3035738205
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 86 125 / 96 140
* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 95 138
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +4 +8 -1 -2 / 3 6
* notice: removed / changed dates: [] / [2022-08-29]

2022-09-11T08:21:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3031105075
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 86 125 / 95 139
* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 96 140
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-11]

2022-09-10T01:59:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3026347403
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 81 119 / 92 135
* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 95 139
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-26] / []

2022-09-09T16:26:14Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3023889543
* notice: last 14d: unq all: 6 16