@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-12T16:28:54Z",
-  "count_outdated" : 125,
-  "uniques_outdated" : 86,
-  "count" : 133,
-  "uniques" : 93,
+  "timestamp" : "2022-09-13T02:01:46Z",
+  "count_outdated" : 133,
+  "uniques_outdated" : 90,
+  "count" : 140,
+  "uniques" : 96,
   "clones" : [
-    {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 8 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 4 ]
-    },
     {
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 5,
