@@ -1,12 +1,7 @@
 {
-  "count": 8,
+  "count": 7,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 5,
