@@ -1,3 +1,11 @@
+2022-09-13T02:01:46Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041848793
+* notice: last 14d: unq all: 5 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 86 125 / 93 133
+* notice: next accum: outdated-unq outdated-all / unq all: 90 133 / 96 140
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-29] / []
+
 2022-09-12T16:28:54Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038943188
 * notice: last 14d: unq all: 5 8
